--- a/package.json
+++ b/package.json
@@ -3,12 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
+    "@redux-offline/redux-offline": "^2.5.2",
+    "bootstrap": "^4.3.1",
+    "cross-fetch": "^3.0.4",
+    "fetch-mock": "^8.0.0",
+    "formik": "^2.0.6",
+    "html-react-parser": "^0.10.0",
+    "humps": "^2.0.1",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
+    "normalizr": "^3.4.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
+    "redux-offline": "^2.0.0",
+    "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
   "scripts": {
@@ -31,5 +53,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.23",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "install": "^0.13.0",
+    "npm": "^6.13.1"
   }
 }
